--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Header -->
     <div class="flex items-start justify-between gap-4 mb-6">
       <div class="mr-4">
-        <h1 class="text-3xl font-extrabold">Live Crypto Dashboard</h1>
+        <h1 class="text-3xl font-extrabold">Live Crypto Dashboard Live</h1>
         <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">All Binance coins (names only). Click any name for full details.</p>
       </div>
 
